swagger implemented and solved security issue
