# app/Http/Controllers/AuthController.php
@@ -11,6 +11,35 @@ use Microsoft\Graph\Model;
 
 class AuthController extends Controller
 {
+    /**
+     * @OA\Post(
+     ** path="/api/signin",
+     *   tags={"AuthController"},
+     *   summary="sign in",
+     *   operationId="signin",
+     *
+     *   @OA\Response(
+     *      response=200,
+     *       description="Link generated",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *
+     *)
+     **/
     //
     public function signin()
     {
@@ -32,7 +61,49 @@ class AuthController extends Controller
         session(['oauthState' => $oauthClient->getState()]);
         return response()->json(["link" => $authUrl]);
     }
+    /**
+     * @OA\Post(
+     ** path="/api/signout",
+     *   tags={"AuthController"},
+     *   summary="signouts user",
+     *   operationId="signout",
+     *
+     *  @OA\RequestBody(
+     *  @OA\JsonContent(
+     *
+     *  @OA\Property(property="user_id", type="integer"),
+     *  @OA\Property(property="token", type="string"),
+     *
+     *
+     *  )),
 
+
+     *   @OA\Response(
+     *      response=200,
+     *       description="Logged out",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *
+     *)
+     **/
     public function signout(Request $request)
     {
         $tokenCache = new TokenCache();
@@ -47,7 +118,48 @@ class AuthController extends Controller
         }
 
     }
+     /**
+     * @OA\Post(
+     ** path="/api/getdata",
+     *   tags={"AuthController"},
+     *   summary="user info",
+     *   operationId="user info",
+     *
+     *  @OA\RequestBody(
+     *  @OA\JsonContent(
+     *
+     *  @OA\Property(property="code", type="string"),
+     *
+     *
+     *  )),
 
+
+     *   @OA\Response(
+     *      response=200,
+     *       description="Success",
+     *      @OA\MediaType(
+     *           mediaType="application/json",
+     *      )
+     *   ),
+     *   @OA\Response(
+     *      response=401,
+     *       description="Unauthenticated"
+     *   ),
+     *   @OA\Response(
+     *      response=400,
+     *      description="Bad Request"
+     *   ),
+     *   @OA\Response(
+     *      response=404,
+     *      description="not found"
+     *   ),
+     *      @OA\Response(
+     *          response=403,
+     *          description="Forbidden"
+     *      ),
+     *
+     *)
+     **/
     //get user data api
     public function get_data(Request $request)
     {
@@ -60,12 +172,11 @@ class AuthController extends Controller
                 'form_params' => [
                     "code" => $request->code,
                     "grant_type" => "authorization_code",
-                    "tenant" => $request->tenant,
-                    "client_id" => $request->client_id,
-                    "client_secret" => $request->client_secret,
-                    "redirect_uri" => "http://localhost/lunch_booking_system/index.html",
+                    "tenant" => ENV('OAUTH_TENANT_ID'),
+                    "client_id" => ENV('OAUTH_APP_ID'),
+                    "client_secret" => ENV('OAUTH_APP_SECRET'),
+                    "redirect_uri" => ENV('OAUTH_REDIRECT_URI'),
                 ],
-
             ]);
 
         $response = json_decode($httpRequest->getBody()->getContents());
